--- a/project1.html
+++ b/project1.html
@@ -9,7 +9,7 @@
     <!-- script file -->
     <script src="js/script.js" defer></script>
     <!-- style file -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- google fonts api -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +33,7 @@
         </div>
         <div class="navbar__links">
             <a href="index.html">Home</a>
-            <a href="html/progress/progress1.html">P.I</a>
+            <a href="progress1.html">P.I</a>
         </div>
     </header>
 
