--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <div class="row">
                     <div class="contact-form">
                         <h3>
-                            Send me a message
+                            Chat With Me
                         </h3>
 
                         <div class="contact_input-box">
