--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </p>
         </div>
         <div class="content">
-            <a class="card" href="progress1.html" target="_blank">
+            <a class="card" href="progress1.html">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
@@ -148,7 +148,7 @@
                 </div>
             </a>
 
-            <a class="card" href="progress2.html" target="_blank">
+            <a class="card" href="progress2.html">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
@@ -164,7 +164,7 @@
                 </div>
             </a>
 
-            <a class="card" href="progress3.html" target="_blank">
+            <a class="card" href="progress3.html">
                 <div class="progress-icon">
                     <span class="material-icons">
                         visibility
