--- a/progress1.html
+++ b/progress1.html
@@ -141,6 +141,30 @@
                 </div>
             </a>
         </div>
+
+        <div class="column">
+            <a href="w5.html" class="image">
+                <img class="image__img" src="img/artdev/progress1/w5_summary.jpg" alt="videoSummary">
+                <div class="image__overlay">
+                    <div class="image__title">5</div>
+                    <p class="image__text">Wk</p>
+                </div>
+            </a>
+            <a href="w5.html" class="image">
+                <img class="image__img" src="img/artdev/progress1/w5_soundImg.jpg" alt="sound">
+                <div class="image__overlay">
+                    <div class="image__title">5</div>
+                    <p class="image__text">Wk</p>
+                </div>
+            </a>
+            <a href="w5.html" class="image">
+                <img class="image__img" src="img/artdev/progress1/w5_project.jpg" alt="project">
+                <div class="image__overlay">
+                    <div class="image__title">5</div>
+                    <p class="image__text">Wk</p>
+                </div>
+            </a>
+        </div>
     </div>
 
     <!-- footer -->
